--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
 }
 h1,
 h2 {
-  @apply font-semibold text-5xl mb-[20px] uppercase;
+  @apply font-semibold text-5xl mb-[20px] uppercase text-white;
 }
 
 a {
@@ -28,5 +28,5 @@ a:hover {
   @apply text-[#be8d2e];
 }
 p {
-  @apply p-3;
+  @apply p-3 text-white;
 }
